chore: add settlementModel rule for settlementui

--- a/terraform/k8s/default-config/mojaloop-rbac-api-resources.yaml
+++ b/terraform/k8s/default-config/mojaloop-rbac-api-resources.yaml
@@ -109,3 +109,12 @@
   - jwt
   - cookie_session
   authorizer_permission: transferApi
+
+- name: settlementModel-view
+  match_path: /api/central-admin/settlementModels<.*>
+  match_methods:
+    - GET
+  authenticator_handlers:
+  - jwt
+  - cookie_session
+  authorizer_permission: settlementView
