--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
@@ -40,6 +40,17 @@ cephFileSystems:
         - failureDomain: zone
           replicated:
             size: 3
+          name: data0
+      storageClass:
+        enabled: true
+        isDefault: false
+        name: ceph-filesystem
+        pool: data0
+        reclaimPolicy: Delete
+        allowVolumeExpansion: true
+        volumeBindingMode: "Immediate"
+        parameters:
+          csi.storage.k8s.io/fstype: ext4
 cephClusterSpec:
   dataDirHostPath: /var/lib/rook
   skipUpgradeChecks: false
