--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
@@ -78,8 +78,8 @@ cephClusterSpec:
                 topologyKey: kubernetes.io/hostname
         topologySpreadConstraints:
             - maxSkew: 1
-              topologyKey: topology.kubernetes.io/zone
-              #topologyKey: kubernetes.io/hostname
+              #topologyKey: topology.kubernetes.io/zone
+              topologyKey: kubernetes.io/hostname
               whenUnsatisfiable: DoNotSchedule
               labelSelector:
                 matchExpressions:
