fix: add 'needs' dependency for init stage in CI pipeline

--- a/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
+++ b/terraform/gitlab/ci-templates/k8s-cluster/.gitlab-ci.yml
@@ -235,6 +235,8 @@ apps:
 refresh-deploy-infra:
   extends: .terraform:deploy
   stage: auto-run
+  needs:
+    - init
   variables:
     GIT_DEPTH: 0
   id_tokens:
@@ -261,6 +263,8 @@ refresh-deploy-infra:
 tf-refresh-deploy-infra:
   extends: .terraform:deploy
   stage: auto-run-tf
+  needs:
+    - init
   variables:
     GIT_DEPTH: 0
   id_tokens:
