--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
@@ -12,7 +12,6 @@ cephClusterSpec:
   dataDirHostPath: /var/lib/rook
   skipUpgradeChecks: false
   continueUpgradeAfterChecksEvenIfNotHealthy: false
-  # The option to automatically remove OSDs that are out and are safe to destroy.
   removeOSDsIfOutAndSafeToRemove: true
 
   mon:
@@ -31,7 +30,7 @@ cephClusterSpec:
       - name: rook
         enabled: true
 
-  # enable the ceph dashboard
+  # Ceph dashboard
   dashboard:
     enabled: true
     prometheusEndpoint: http://prometheus-operated.monitoring.svc.cluster.local:9090
@@ -49,44 +48,64 @@ cephClusterSpec:
       tuneFastDeviceClass: false
       # Topology spread constraints
       placement:
-        topologySpreadConstraints:
-          - maxSkew: 1
-            topologyKey: kubernetes.io/hostname
-            #topologyKey: topology.kubernetes.io/zone
-            whenUnsatisfiable: ScheduleAnyway
-            labelSelector:
-              matchExpressions:
-                - key: app
-                  operator: In
-                  values:
-                    - rook-ceph-osd
-      # preparePlacement:
-      #   podAntiAffinity:
-      #     preferredDuringSchedulingIgnoredDuringExecution:
-      #       - weight: 100
-      #         podAffinityTerm:
-      #           labelSelector:
-      #             matchExpressions:
-      #               - key: app
-      #                 operator: In
-      #                 values:
-      #                   - rook-ceph-osd
-      #               - key: app
-      #                 operator: In
-      #                 values:
-      #                   - rook-ceph-osd-prepare
-      #           topologyKey: kubernetes.io/hostname
-      #   topologySpreadConstraints:
-      #       - maxSkew: 1
-      #         topologyKey: topology.kubernetes.io/zone
-      #         #topologyKey: kubernetes.io/hostname
-      #         whenUnsatisfiable: DoNotSchedule
-      #         labelSelector:
-      #           matchExpressions:
-      #             - key: app
-      #               operator: In
-      #               values:
-      #                 - rook-ceph-osd-prepare
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: topology.kubernetes.io/zone
+                    operator: Exists
+          topologySpreadConstraints:
+            - maxSkew: 1
+              #topologyKey: kubernetes.io/hostname
+              #whenUnsatisfiable: ScheduleAnyway
+              topologyKey: topology.kubernetes.io/zone
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - rook-ceph-osd
+        preparePlacement:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                    - key: topology.kubernetes.io/zone
+                      operator: Exists
+          podAntiAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 100
+                podAffinityTerm:
+                  labelSelector:
+                    matchExpressions:
+                      - key: app
+                        operator: In
+                        values:
+                          - rook-ceph-osd
+                      - key: app
+                        operator: In
+                        values:
+                          - rook-ceph-osd-prepare
+                  topologyKey: kubernetes.io/hostname
+          topologySpreadConstraints:
+            - maxSkew: 1
+              #topologyKey: ubernetes.io/hostname
+              topologyKey: topology.kubernetes.io/zone
+              whenUnsatisfiable: DoNotSchedule
+              labelSelector:
+                matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                      - rook-ceph-osd-prepare
+      # OSD daemon limits
+      resources:
+        limits:
+          memory: "4Gi"
+        requests:
+          cpu: "500m"
+          memory: "4Gi"
       volumeClaimTemplates:
       - metadata:
           name: data
@@ -105,42 +124,42 @@ cephClusterSpec:
     mon: system-node-critical
     osd: system-node-critical
     mgr: system-cluster-critical
-  disruptionManagement:
-    managePodBudgets: true
-    osdMaintenanceTimeout: 30
-    pgHealthCheckTimeout: 0
+#  disruptionManagement:
+#    managePodBudgets: true
+#    osdMaintenanceTimeout: 30
+#    pgHealthCheckTimeout: 0
 
 # CephObjectStore configurations
-cephObjectStores:
-  - name: ceph-objectstore
-    spec:
-      metadataPool:
-        failureDomain: host
-        replicated:
-          size: 3
-      dataPool:
-        failureDomain: host
-    storageClass:
-      enabled: true
-      name: ceph-bucket
-      reclaimPolicy: Delete
-      volumeBindingMode: "Immediate"
-      parameters:
-        region: "${ARGOCD_ENV_rook_ceph_object_store_region}"
-    ingress:
-      enabled: false
-
+#cephObjectStores:
+#  - name: ceph-objectstore
+#    spec:
+#      metadataPool:
+#        failureDomain: host
+#        replicated:
+#          size: 3
+#      dataPool:
+#        failureDomain: host
+#    storageClass:
+#      enabled: true
+#      name: ceph-bucket
+#      reclaimPolicy: Delete
+#      volumeBindingMode: "Immediate"
+#      parameters:
+#        region: "${ARGOCD_ENV_rook_ceph_object_store_region}"
+#    ingress:
+#      enabled: false
+#
 # Ceph Block Pools configurations
-cephBlockPools:
-  - name: ceph-blockpool
-    spec:
-      failureDomain: host #host, osd
-      replicated:
-        size: 3
-    storageClass:
-      isDefault: true
-      reclaimPolicy: Delete
-      allowVolumeExpansion: true
-      volumeBindingMode: "Immediate"
-      parameters:
-        csi.storage.k8s.io/fstype: ext4
+#cephBlockPools:
+#  - name: ceph-blockpool
+#    spec:
+#      failureDomain: host #host, osd
+#      replicated:
+#        size: 3
+#    storageClass:
+#      isDefault: true
+#      reclaimPolicy: Delete
+#      allowVolumeExpansion: true
+#      volumeBindingMode: "Immediate"
+#      parameters:
+#        csi.storage.k8s.io/fstype: ext4
