chore(csi-883): add ndc adjustment api resource (#415)
* chore: add ndc adjustment api resource

* chore: follow naming convention

--- a/terraform/k8s/default-config/mojaloop-rbac-api-resources.yaml
+++ b/terraform/k8s/default-config/mojaloop-rbac-api-resources.yaml
@@ -17,6 +17,15 @@
   - cookie_session
   authorizer_permission: positionFundsInOut
 
+- name: position-ndc-edit
+  match_path: /api/central-admin/participants/<.*>/limits
+  match_methods:
+    - PUT
+  authenticator_handlers:
+  - jwt
+  - cookie_session
+  authorizer_permission: positionNDCEdit
+
 - name: participant-disable-enable
   match_path: /api/central-admin/participants/<.*>/accounts<.*>
   match_methods:
@@ -118,3 +127,4 @@
   - jwt
   - cookie_session
   authorizer_permission: settlementView
+
