update topology setting

--- a/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/overlays/cloud_provider/aws/rook-ceph/rook-ceph-cluster-values.yaml
@@ -57,9 +57,9 @@ cephClusterSpec:
           topologySpreadConstraints:
             - maxSkew: 1
               #topologyKey: kubernetes.io/hostname
-              #whenUnsatisfiable: ScheduleAnyway
+              #whenUnsatisfiable: DoNotSchedule
               topologyKey: topology.kubernetes.io/zone
-              whenUnsatisfiable: DoNotSchedule
+              whenUnsatisfiable: ScheduleAnyway
               labelSelector:
                 matchExpressions:
                   - key: app
@@ -90,7 +90,7 @@ cephClusterSpec:
                   topologyKey: kubernetes.io/hostname
           topologySpreadConstraints:
             - maxSkew: 1
-              #topologyKey: ubernetes.io/hostname
+              #topologyKey: kubernetes.io/hostname
               topologyKey: topology.kubernetes.io/zone
               whenUnsatisfiable: DoNotSchedule
               labelSelector:
