Add metrics server helm

--- a/gitops/applications/base/base-monitoring/kustomization.yaml
+++ b/gitops/applications/base/base-monitoring/kustomization.yaml
@@ -14,3 +14,7 @@ helmCharts:
     repo: https://charts.bitnami.com/bitnami
     valuesFile: values-grafana-operator.yaml
     namespace: ${ARGOCD_ENV_monitoring_namespace}
+  - name: metrics-server
+    releaseName: metrics-server
+    valuesFile: values-metrics-server.yaml
+    version: 3.12.1
