--- a/gitops/applications/base/base-monitoring/kustomization.yaml
+++ b/gitops/applications/base/base-monitoring/kustomization.yaml
@@ -18,4 +18,5 @@ helmCharts:
     releaseName: metrics-server
     repo: https://kubernetes-sigs.github.io/metrics-server
     valuesFile: values-metrics-server.yaml
+    namespace: ${ARGOCD_ENV_monitoring_namespace}
     version: 3.12.2
