--- a/gitops/applications/overlays/rdbms_provider/percona/zitadel-pre/zitadel-config-secrets.yaml
+++ b/gitops/applications/overlays/rdbms_provider/percona/zitadel-pre/zitadel-config-secrets.yaml
@@ -1,3 +1,59 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: zitadel-secret-creator
+  namespace: ${ARGOCD_ENV_zitadel_namespace}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: ${ARGOCD_ENV_zitadel_namespace}
+  name: zitadel-secret-role
+rules:
+  - apiGroups: [""]
+    resources:
+      - secrets
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - authorization.k8s.io
+    resources:
+      - selfsubjectrulesreviews
+    verbs:
+      - create
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: zitadel-secret-creator
+  namespace: ${ARGOCD_ENV_zitadel_namespace}
+subjects:
+  - kind: ServiceAccount
+    name: zitadel-secret-creator
+roleRef:
+  kind: Role
+  name: zitadel-secret-role
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: zitadel-secret-store
+  namespace:  ${ARGOCD_ENV_zitadel_namespace}
+spec:
+  provider:
+    kubernetes:
+      auth:
+        serviceAccount:
+          name: "zitadel-secret-creator"
+      remoteNamespace:  ${ARGOCD_ENV_zitadel_namespace}
+      server:
+        caProvider:
+          type: ConfigMap
+          name: kube-root-ca.crt
+          key: ca.crt
 ---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
@@ -41,8 +97,20 @@ spec:
         config.yaml: |
           Database:
             Postgres:
-              Host: {{.host}}
-              User:
-                Password: '{{.password}}'
               Admin:
                 Password: '{{.password}}'
+                SSL:
+                  Mode: require
+                Username: {{.user}}
+              Database: {{.dbname}}
+              Host: {{.host}}
+              MaxConnIdleTime: 5m
+              MaxConnLifetime: 30m
+              MaxIdleConns: 10
+              MaxOpenConns: 20
+              Port: {{.port}}
+              User:
+                Password: '{{.password}}'
+                SSL:
+                  Mode: require
+                Username: {{.user}}
