--- a/gitops/argo-apps/base/zitadel-pre.yaml
+++ b/gitops/argo-apps/base/zitadel-pre.yaml
@@ -146,3 +146,82 @@ spec:
 
           - name: "db_storage_iops"
             value: "${ARGOCD_ENV_security_zitadel_rds_provider_db_storage_iops}"
+
+    #zitadel db
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
+      path: gitops/applications/overlays/rdbms_provider/${ARGOCD_ENV_security_zitadel_rdbms_provider}/db
+      plugin:
+        name: envsubst
+        env:
+          - name: "cluster_name"
+            value: "${ARGOCD_ENV_cluster_name}"
+
+          - name: "app_name"
+            value: "${ARGOCD_ENV_security_zitadel_app_name}"
+
+          - name: "namespace"
+            value: "${ARGOCD_ENV_security_zitadel_namespace}"
+
+          - name: "vault_k8s_admin_auth_path"
+            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_auth_path}"
+
+          - name: "vault_k8s_admin_role_name"
+            value: "${ARGOCD_ENV_vault_post_config_vault_k8s_admin_role_name}"
+
+          - name: "vault_namespace"
+            value: "${ARGOCD_ENV_vault_vault_namespace}"
+
+          - name: "postgres_replicas"
+            value: "${ARGOCD_ENV_security_zitadel_percona_provider_postgres_replicas}"
+
+          - name: "postgres_proxy_replicas"
+            value: "${ARGOCD_ENV_security_zitadel_percona_provider_postgres_proxy_replicas}"
+
+          - name: "postgres_storage_size"
+            value: "${ARGOCD_ENV_security_zitadel_percona_provider_percona_postgres_storage_size}"
+
+          - name: "pgdb_helm_version"
+            value: "${ARGOCD_ENV_security_zitadel_percona_provider_pgdb_helm_version}"            
+
+          - name: "rds_postgres_storage_size"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_postgres_storage_size}"
+
+          - name: "rds_postgres_instance_size"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_postgres_instance_size}"
+
+          - name: "rds_vpc_id"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_rdbms_vpc_id}"
+
+          - name: "vpc_cidr"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_vpc_cidr}"
+
+          - name: "rds_subnet_list"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_rdbms_subnet_list}"
+
+          - name: "cloud_region"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_db_provider_cloud_region}"
+
+          - name: "db_secret"
+            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_secret}"
+
+          - name: "db_name"
+            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_name}"
+
+          - name: "db_username"
+            value: "${ARGOCD_ENV_security_zitadel_zitadel_db_username}"
+
+          - name: "dbdeploy_name_prefix"
+            value: "${ARGOCD_ENV_security_zitadel_zitadel_dbdeploy_name_prefix}"
+
+          - name: "db_backup_retention_period"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_backup_retention_period}"
+
+          - name: "db_preferred_backup_window"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_preferred_backup_window}"
+
+          - name: "db_storage_type"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_storage_type}"
+
+          - name: "db_storage_iops"
+            value: "${ARGOCD_ENV_security_zitadel_rds_provider_storage_iops}"     
