--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -115,14 +115,14 @@ gitlab_redis_cluster_size: "'3'"
 gitlab_redis_storage_size: "'5Gi'"
 gitlab_postgres_replicas: "'1'"
 gitlab_postgres_proxy_replicas: "'1'"
-gitlab_postgres_storage_size: "'10'"
-#gitlab_postgres_storage_size: "'100'" # for rds
+gitlab_postgres_storage_size: "10Gi"
+gitlab_rds_postgres_storage_size: "'100'"
 gitlab_postgres_instance_size: "small"
 gitlab_pgdb_helm_version: "2.4.0"
 gitlab_praefect_postgres_replicas: "'1'"
 gitlab_praefect_postgres_proxy_replicas: "'1'"
-gitlab_praefect_postgres_storage_size: "'10'"
-#gitlab_praefect_postgres_storage_size: "'100'" # for rds add this line in custom-config/common-vars.yaml
+gitlab_praefect_postgres_storage_size: "10Gi"
+gitlab_praefect_rds_postgres_storage_size: "'100'"
 gitlab_praefect_postgres_instance_size: "small"
 gitlab_praefect_pgdb_helm_version: "2.4.0"
 git_lfs_max_objects: "'1000000'"
@@ -165,11 +165,14 @@ env_token_ttl: "14d"
 # Zitadel
 zitadel_postgres_rdbms_provider: "percona"
 zitadel_postgres_instance_size: "small"
-zitadel_postgres_storage_size: "'20'"
+zitadel_postgres_storage_size: "20Gi"
 zitadel_db_storage_size: "5Gi"
 #Zitadel RDS specific
 zitadel_db_backup_retention_period: "'1'"
 zitadel_db_preferred_backup_window: "07:00-09:00"
-zitadel_rds_storage_size: "100"
+zitadel_rds_postgres_storage_size: "'100'"
 zitadel_db_storage_iops: "'5000'"
 zitadel_db_storage_type: "io1"
+zitadel_postgres_replicas: "'1'"
+zitadel_postgres_proxy_replicas: "'1'"
+zitadel_pgdb_helm_version: "2.4.0"
