--- a/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
+++ b/gitops/applications/base/monitoring-post-config/grafana-crs.yaml
@@ -103,6 +103,26 @@ spec:
     editable: true
 ---
 apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDatasource
+metadata:
+  name: mimir-alertmanager
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  datasource:
+    name: Alertmanager
+    type: alertmanager
+    access: proxy
+    url: http://central-monitoring-grafana-mimir-gateway
+    isDefault: false
+    editable: true
+    jsonData:
+      httpHeaderName1: "X-Scope-OrgID"
+    secureJsonData:
+      httpHeaderValue1: "infitx" # TODO: possibly expose it as configurable env var
+---
+apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
   name: monitoring
