--- a/gitops/applications/base/monitoring-post-config/kustomization.yaml
+++ b/gitops/applications/base/monitoring-post-config/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - dashboards-prometheus.yaml
   - dashboards-rook-ceph.yaml
   - istio-crs.yaml
+  - mimir-alertmanager-secrets.yaml
   - mimirtool-cronjob.yaml
   - rook-ceph-objectstore-exporter.yaml
 
@@ -25,6 +26,3 @@ configMapGenerator:
   - name: mimir-ruler-data
     files:
       - alerts-storage.yaml 
-  - name: mimir-alertmanager-data
-    files:
-      - config.yaml=mimir-alermanager-config.yaml 
