--- a/gitops/argo-apps/base/gitlab-pre.yaml
+++ b/gitops/argo-apps/base/gitlab-pre.yaml
@@ -265,7 +265,10 @@ spec:
             value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_storage_type}"
 
           - name: "db_storage_iops"
-            value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_storage_iops}"
+            value: "${ARGOCD_ENV_gitlab_webdb_rds_provider_storage_iops}"  
+
+          - name: "externalservice_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_gitlab_externalservice_name}"             
 
     #praefect db
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
@@ -345,3 +348,6 @@ spec:
 
           - name: "db_storage_iops"
             value: "${ARGOCD_ENV_gitlab_praefectdb_rds_provider_storage_iops}"
+
+          - name: "externalservice_name"
+            value: "${ARGOCD_ENV_gitlab_gitlab_praefect_externalservice_name}"                  
